--- a/LAB3/ITRW322.html
+++ b/LAB3/ITRW322.html
@@ -5,6 +5,12 @@
     <title>ITRW 322 Networks Assignment</title>
   </head>
   <body>
+       <h1>Programming Sockets in Python</h1>
 
+       <p>A socket is one endpoint of a two way communication</p>
+       <p>link between two programs running on the network</p>
+       <p>A socket in bound to a port number so that the TCP layer</P>
+       <p>can identify the application that data is destined to be sent</p>
+       
   </body>
 </html>
